--- a/planets/pubspec.yaml
+++ b/planets/pubspec.yaml
@@ -42,9 +42,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+   assets:
+    - assets/img/mars.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -57,11 +56,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-#   fonts:
-#     - family: Poppins
-#       fonts:
-#         - asset: assets/fonts/Poppins-SemiBold.ttf
-#           weight: 600
+   fonts:
+     - family: Poppins
+       fonts:
+         - asset: assets/fonts/Poppins-SemiBold.ttf
+           weight: 600
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
